[package]
name = "ontocode-exec-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "ontocode-exec-server"
path = "src/main.rs"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
arc-swap = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true, features = ["http1", "tokio", "ws"] }
base64 = { workspace = true }
bytes = { workspace = true }
ontocode-app-server-protocol = { workspace = true }
ontocode-api = { workspace = true }
ontocode-client = { workspace = true }
ontocode-file-system = { workspace = true }
ontocode-protocol = { workspace = true }
ontocode-sandboxing = { workspace = true }
ontocode-utils-absolute-path = { workspace = true }
ontocode-utils-pty = { workspace = true }
ontocode-utils-rustls-provider = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true, features = ["json", "rustls-tls", "stream"] }
prost = "0.14.3"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tokio = { workspace = true, features = [
    "fs",
    "io-std",
    "io-util",
    "macros",
    "net",
    "process",
    "rt-multi-thread",
    "sync",
    "time",
] }
tokio-util = { workspace = true, features = ["rt"] }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
anyhow = { workspace = true }
ontocode-test-binary-support = { workspace = true }
ctor = { workspace = true }
http = { workspace = true }
pretty_assertions = { workspace = true }
serial_test = { workspace = true }
tempfile = { workspace = true }
test-case = "3.3.1"
wiremock = { workspace = true }
