[package]
name = "ontocode-exec"
version.workspace = true
edition.workspace = true
license.workspace = true
autotests = false

[[bin]]
name = "ontocode-exec"
path = "src/main.rs"

[lib]
name = "ontocode_exec"
path = "src/lib.rs"
doctest = false

[[test]]
name = "all"
path = "tests/all.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
ontocode-arg0 = { workspace = true }
ontocode-app-server-client = { workspace = true }
ontocode-app-server-protocol = { workspace = true }
ontocode-cloud-config = { workspace = true }
ontocode-config = { workspace = true }
ontocode-core = { workspace = true }
ontocode-feedback = { workspace = true }
ontocode-git-utils = { workspace = true }
ontocode-login = { workspace = true }
ontocode-model-provider-info = { workspace = true }
ontocode-otel = { workspace = true }
ontocode-protocol = { workspace = true }
ontocode-utils-absolute-path = { workspace = true }
ontocode-utils-cli = { workspace = true }
ontocode-utils-oss = { workspace = true }
ontocode-utils-sandbox-summary = { workspace = true }
owo-colors = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
supports-color = { workspace = true }
tokio = { workspace = true, features = [
    "io-std",
    "macros",
    "process",
    "rt-multi-thread",
    "signal",
] }
tracing = { workspace = true, features = ["log"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
ts-rs = { workspace = true, features = [
    "uuid-impl",
    "serde-json-impl",
    "no-serde-warnings",
] }
uuid = { workspace = true }


[dev-dependencies]
assert_cmd = { workspace = true }
ontocode-apply-patch = { workspace = true }
ontocode-utils-cargo-bin = { workspace = true }
core_test_support = { workspace = true }
libc = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
predicates = { workspace = true }
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
tracing-opentelemetry = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
wiremock = { workspace = true }
