[package]
name = "ontocode-external-agent-migration"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false
name = "ontocode_external_agent_migration"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
ontocode-hooks = { workspace = true }
ontocode-provider-auth = { workspace = true }
ontocode-protocol = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
time = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
