[package]
name = "ontocode-external-agent-sessions"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false
name = "ontocode_external_agent_sessions"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
chrono = { workspace = true }
ontocode-protocol = { workspace = true }
ontocode-utils-output-truncation = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }

[dev-dependencies]
ontocode-app-server-protocol = { workspace = true }
tempfile = { workspace = true }
